# diagram-ai-generator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  SCRIPT_VIDEO_YOUTUBE.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pr-check.yml  release.yml
diagram_ai_generator/: .gitignore  FINAL_INSTRUCTIONS.md  Makefile  README.md  __init__.py  demo.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
diagram_ai_generator/docs/: ARCHITECTURE.md  EXAMPLES.md
diagram_ai_generator/src/application/cli/: main.py
diagram_ai_generator/src/application/mcp/: server.py
diagram_ai_generator/src/domain/: exceptions.py
diagram_ai_generator/src/domain/entities/: diagram.py  provider.py
diagram_ai_generator/src/domain/repositories/: ai_provider_repository.py  diagram_repository.py
diagram_ai_generator/src/domain/use_cases/: generate_diagram_use_case.py  list_providers_use_case.py
diagram_ai_generator/src/infrastructure/adapters/: diagrams_repository.py  openai_provider.py
diagram_ai_generator/tests/: test_domain.py  test_use_cases.py
tests/: __init__.py
tests/fixtures/: diagram_specs.py
tests/integration/: test_diagram_service.py
tests/unit/: test_infrastructure_adapters.py  test_node_resolver.py  test_value_objects.py
